# mandelbrot

./: .gitmodules  CMakeLists.txt  README.md
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  mandelbrot
debug/.cmake/api/v1/reply/: cache-v2-ee334f9453377b3fe46d.json  cmakeFiles-v1-62e3a787d9698055044d.json  codemodel-v2-136ee05e4f1a443c1bff.json  index-2020-12-29T13-04-02-0545.json  target-e172-Debug-ef5ad4d864958ee7c841.json  target-mandelbrot-Debug-c0e1586bc1bcafefd978.json  target-sdl_impl-Debug-053ec781311709d31420.json
src/: flags.cpp  flags.h  fractalview.cpp  fractalview.h  main.cpp  mandelbrot.cpp  mandelbrot.h  serializer.h  test.cpp  test.h
